objects/pse__Change_Request_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Preferences impacting the change request process.</description>
    <fields>
        <fullName>pse__Budget_Name_Suffix__c</fullName>
        <defaultValue>&quot;-Change Request Budget&quot;</defaultValue>
        <description>Suffix for a budget that has been created due to a change request.</description>
        <inlineHelpText>Suffix for a budget that has been created due to a change request.</inlineHelpText>
        <label>Budget Name Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Create_Change_Request_Field_Set__c</fullName>
        <description>The API name of the Opportunity field set that defines the additional fields added to the Create Change request window.</description>
        <inlineHelpText>The API name of the Opportunity field set that defines the additional fields added to the Create Change request window.</inlineHelpText>
        <label>Create Change Request Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Budget_Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <description>The default status of a budget that has been created due to a change request.</description>
        <inlineHelpText>The default status of a budget that has been created due to a change request.</inlineHelpText>
        <label>Default Budget Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Budget_Type__c</fullName>
        <defaultValue>&quot;Customer Purchase Order Change Request&quot;</defaultValue>
        <description>The default type for a budget that has been created due to a change request.</description>
        <inlineHelpText>The default type for a budget that has been created due to a change request.</inlineHelpText>
        <label>Default Budget Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Include_Budget__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true, budget form is visible if you have CRUD permission on budget.</description>
        <inlineHelpText>When true, budget form is visible if you have CRUD permission on budget.</inlineHelpText>
        <label>Include Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Name_Suffix__c</fullName>
        <defaultValue>&quot;-Change Request&quot;</defaultValue>
        <description>Suffix for an opportunity that has been created due to a change request.</description>
        <inlineHelpText>Suffix for an opportunity that has been created due to a change request.</inlineHelpText>
        <label>Opportunity Name Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Change Request Settings</label>
</CustomObject>